# gallifrey

./: .README.md.swp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.html  README.md  config-horse.json  config.json  set_resolution.py
adaptive/: CMakeLists.txt  README.md  adapt.cpp  reconstr.h
resources/: process.py
src/: aabb.h  apr.h  backend.h  colors.h  conversion.h  geometry.h  image.h  interpolate.h  io.h  kdtree.h  main.cpp  material.h  output_ppm.h  shader.h  texture.h  tracer.h  tracing.h  triangle.h
src/adaptive/: README.html  README.md  reconstruction.h  sampling.h
src/cuda/: render.cu
